--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,14 @@
 name = "repl-nix-workspace"
 version = "0.1.0"
 description = "Add your description here"
-requires-python = ">=3.11"
+requires-python = ">=3.8"
 dependencies = [
-    "duckdb>=1.3.2",
-    "pandas>=2.3.2",
-    "plotly>=6.3.0",
-    "pyarrow>=21.0.0",
-    "setuptools>=80.9.0",
-    "streamlit>=1.48.1",
-    "watchdog>=6.0.0",
+    "duckdb>=0.8,<0.10",
+    "pandas>=1.3,<2.1",
+    "plotly>=5.0.0",
+    "pyarrow>=8.0.0",
+    "setuptools>=65.0",
+    "streamlit>=1.28.0",
+    "watchdog>=2.1.0",
     "pyyaml>=6.0",
 ]
