--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.8"
 dependencies = [
-    "duckdb>=0.8,<0.10",
-    "pandas>=1.3,<2.1",
+    "duckdb>=1.0",
+    "pandas>=2.0",
     "plotly>=5.0.0",
     "pyarrow>=8.0.0",
     "setuptools>=65.0",
